added author, price, and published_date attributes to Books model. Attempted to add input fields to CRUD pages, but it's not working properly. Need to fix this.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,6 +3,9 @@
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
+  <%= @book.author %>
+  <%= @book.price %>
+  <%= @book.published_date %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
