--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,6 +6,9 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Author</th>
+      <th>Price</th>
+      <th>Published Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
