--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,8 +3,20 @@
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
+</p>
+
+<p>
+  <strong>Author:</strong>
   <%= @book.author %>
+</p>
+
+<p>
+  <strong>Price:</strong>
   <%= @book.price %>
+</p>
+
+<p>
+  <strong>Published Date:</strong>
   <%= @book.published_date %>
 </p>
 
